...
  const { refetch: refetchSession } = useSession()
  const queryClient = useQueryClient()
  const router = useRouter()

  const errorColor = useThemeColor("error")
  const mutedColor = useThemeColor("foregroundMuted")
  const headerOptions = useHeaderOptions("Daily & Weekly Quests")

  const [removedIds, setRemovedIds] = useState<string[]>([])
  const [initialized, setInitialized] = useState(false)
  const [error, setError] = useState<string>()
  const [isPending, setIsPending] = useState(false)

...
