...
    <NativeTabs
      tintColor="#cc785c"
      backgroundColor={colorScheme === "dark" ? "#181715" : "#faf9f5"}
      disableTransparentOnScrollEdge
    >
      <NativeTabs.Trigger name="index">
        <Label>Quest</Label>
        <Icon
          sf="target"
          androidSrc={<VectorIcon family={Feather} name="target" />}
        />
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="shop">
...
