...
        source={require("@/assets/images/login-background.jpeg")}
        contentFit="cover"
        style={{ width: "100%", height: "75%", position: "absolute", top: 0 }}
      />
      <View className="z-10 h-[40%] justify-center gap-6 rounded-xl bg-canvas px-lg dark:bg-surface-dark">
        <Text className="text-center font-display text-display-md text-ink dark:text-on-dark">
          Welcome to Elix
        </Text>
        <Button
          variant="outline"
          onPress={handleGoogleLogin}
          disabled={isPending}
          testID="LoginGoogle"
...
